@@ -1,3 +1,7 @@
+2007-12-14  Andreas Kirschbaum
+
+	* Make the window close button in non-full screen mode work.
+
 2007-12-12  Andreas Kirschbaum
 
 	* Support command lists ("cmd1;cmd2;cmd3").
